--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.3",
     "if-env": "^1.0.4"
   }
 }
